[tool.poetry]
name = "digit-classifier"
version = "0.1.0"
description = "An example of training a classifier on MNIST with JAX."
authors = ["Carl Thomé <carlthome@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
jax = "^0.3.14"
jaxlib = "^0.3.14"
tensorflow-datasets = "^4.6.0"
tensorflow = "^2.9.1"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
mypy = "^0.971"
isort = "^5.10.1"
pre-commit = "^2.20.0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
